--- a/src/components/floatingButton.css
+++ b/src/components/floatingButton.css
@@ -2,6 +2,7 @@
   position: absolute;
   bottom: 20px;
   right: 20px;
+  position: fixed;
 }
 .MuiSpeedDialAction-staticTooltipLabel {
   width: 100px;
