--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
   text-align: center;
-  /* display: flex;
-  align-items: center; */
 }
 [class*="Snackbar_snackbar-wrapper"] {
   z-index: 9999 !important;
+}
+body {
+  background-color: #f5f5f5;
 }
