--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -6,7 +6,7 @@
   margin: 20px;
 }
 .login_body {
-  background-color: #fff;
+  background-color: #f5f5f5;
   width: 100%;
   border-top-right-radius: 60px;
   border-top-left-radius: 60px;
