--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -7,13 +7,14 @@
 }
 .login_body {
   background-color: #f5f5f5;
-  width: 100%;
   border-top-right-radius: 60px;
   border-top-left-radius: 60px;
   padding-top: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .forgotPassword_btn {
-  text-align: right;
   width: 80%;
   margin: auto;
   color: #777;
