--- a/src/pages/myTask.css
+++ b/src/pages/myTask.css
@@ -31,7 +31,7 @@
 }
 .exitEntry {
   width: 100%;
-  height: 50px;
+  height: 70px;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -39,6 +39,7 @@
   position: fixed;
   bottom: 0px;
   background-color: #fff;
+  cursor: pointer;
 }
 .exitEntryText {
   font-weight: bold;
