--- a/src/pages/users.css
+++ b/src/pages/users.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 70px;
 }
 .MuiSpeedDial-actions {
   display: none;
