--- a/src/pages/cartable.css
+++ b/src/pages/cartable.css
@@ -1,5 +1,5 @@
 .cartable-container {
-  margin: 40px 16px;
+  margin: 20px 16px 80px;
   border-radius: 12px;
   background: #dbeaf1;
   padding: 10px 13px;
