--- a/src/components/msgModal.css
+++ b/src/components/msgModal.css
@@ -14,6 +14,13 @@
   font-weight: 700;
   font-size: 14px;
   color: #269cd9;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.msg-modal-project-all {
+  color: #fff;
+  background-color: #269cd9;
 }
 .msg-modal-btn-collapse {
   padding: 10px 0px;
