--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -1,31 +1,3 @@
-.task {
-  width: 150px;
-  height: 150px;
-  border-radius: 75px;
-  position: relative;
-  /* background: transparent; */
-
-  /* background-image: url(https://web.archive.org/web/20160312084140im_/http://splatoon.nintendo.com/assets/img/nav-bg-fill-blue.png?1443460871); */
-  /* transform: rotate(45deg); */
-
-  /* flex: 1; */
-  /* padding: 25px 50px; */
-  /* margin: 25px; */
-  /* border-radius: 999px; */
-  /* border: 5px solid #176085; */
-  font-family: "VT323", monospace;
-  /* font-size: 25px; */
-  /* text-shadow: 0 3px 5px rgba(#000, 0.25); */
-  /* white-space: nowrap; */
-  /* color: #fff; */
-  /* background: transparent; */
-  /* background-image: url(https://web.archive.org/web/20160312084140im_/http://splatoon.nintendo.com/assets/img/nav-bg-fill-blue.png?1443460871);
-  background-repeat: repeat-x;
-  animation: animate 10s linear infinite; */
-  /* background-position: 0 -100%; */
-  /* transition: 1.5s ease; */
-}
-
 .circleBase {
   width: 150px;
   height: 150px;
@@ -34,55 +6,12 @@
   justify-content: center;
   align-items: center;
   background-color: #f5f5f5;
-  background-image: url(../assets/images/nav-bg-fill-blue.png);
+  background-image: url(../assets/images/wave-fill.png);
   background-repeat: repeat-x;
-  animation-duration: 2000ms;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.14);
-}
-.emptyCircle {
-  background-color: #f5f5f5;
-}
-.indicator {
-  border-top-color: #176085;
-  border-left-color: #176085;
-  border-bottom-color: transparent;
-  border-right-color: transparent;
-  border-width: 5px;
-  position: absolute;
-}
-.coverIndicator {
-  border-top-color: #f5f5f5;
-  border-left-color: #f5f5f5;
-  border-bottom-color: transparent;
-  border-right-color: transparent;
-  border-width: 5px;
-  position: absolute;
-  /* transform: [{rotate: '45deg'}], */
-}
-.container_DISABLE {
+  position: relative;
+  font-family: "VT323", monospace;
   background-color: #269dd830;
-  /* background-position: 500% 100%; */
-}
-.container_ENABLE {
-  background-color: #269dd8;
-}
-.task_text {
-  /* text-align: center; */
-  border-top: solid 1px;
-  width: 120px;
-  margin: auto;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.text_DISABLE {
-  color: #442c2e60;
-  border-color: #442c2e60;
-}
-.text_ENABLE {
-  color: #fff;
-  border-color: #fff;
 }
 .task_time {
   font-size: 23px;
@@ -91,4 +20,16 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.task_text {
+  border-top: solid 1px;
+  width: 120px;
+  margin: auto;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
