--- a/src/components/Alert.css
+++ b/src/components/Alert.css
@@ -4,6 +4,7 @@
   font-weight: 800;
   font-size: 17px;
   font-family: Vazirmatn, sans-serif;
+  text-align: center;
 }
 #alert-dialog-description {
   font-weight: 500;
