--- a/src/components/cardUser.css
+++ b/src/components/cardUser.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 175px;
+  width: 160px;
   background-color: #f5f5f5;
   border-radius: 10px;
   margin: 20px 15px;
   position: relative;
-  padding: 5px 5px;
+  padding: 5px;
   box-sizing: border-box;
 }
 .card-user-avatar {
@@ -66,6 +66,7 @@
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.07);
   background-color: #fff;
   padding: 4px;
+  cursor: pointer;
 }
 .card-user-icon-more {
   color: #fff;
