--- a/src/components/message.css
+++ b/src/components/message.css
@@ -12,6 +12,8 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .msg-time {
   color: #1d1d1d;
