--- a/src/components/tabs.css
+++ b/src/components/tabs.css
@@ -5,6 +5,8 @@
   box-shadow: 0px 3px 5px 0px #00000050;
   z-index: 2;
   display: flex;
+  padding-right: 1px;
+  box-sizing: border-box;
 }
 .filter {
   display: inline-block;
@@ -14,8 +16,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-left: 1px solid #fff;
+  border-top: 1px solid #fff;
+  box-sizing: border-box;
 }
-.activeFilter {
+.activeTab {
   background-color: #176085;
 }
 .filterText {
