--- a/src/pages/myReport.css
+++ b/src/pages/myReport.css
@@ -4,37 +4,26 @@
 .MR_report {
   margin: 5px auto;
   background-color: #269dd830;
-  padding: 10px 5%;
   width: 85%;
+  padding: 10px;
 }
-.MR_date {
+.MR_title {
   color: #000;
-  font-size: 15px;
+  font-size: 17px;
   font-weight: bold;
   margin: 0px;
-  padding: 10px 0px;
-  text-align: left;
+  padding-top: 20px;
 }
 .MR_textReport {
   color: #000;
-  margin: 5px 15px;
-  text-align: left;
+  margin: 5px 2px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 70%;
 }
-.MR_filterContainer {
-  display: flex;
-}
-.MR_filter {
-  width: 50%;
-  height: 45px;
+.summery-report {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color: #269dd870;
-}
-.MR_activeFilter {
-  background-color: #269dd8;
-}
-.MR_filterText {
-  color: #fff;
-  font-weight: bold;
+  margin: 0px 15px;
 }
