--- a/src/components/picker.css
+++ b/src/components/picker.css
@@ -1,8 +1,8 @@
 .picker-text {
   color: #000;
-  font-weight: 600;
-  font-size: 15px;
-  padding-left: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 0px 10px;
   text-align: left;
 }
 .picker {
