--- a/src/pages/tabCartable.css
+++ b/src/pages/tabCartable.css
@@ -25,6 +25,7 @@
   align-items: center;
   justify-content: center;
   padding: 5px;
+  box-shadow: 0px 2px 5px 0px #00000050;
 }
 .automation-btn-text {
   color: #fff;
@@ -35,14 +36,16 @@
 .automation-task-container {
   justify-content: space-evenly;
   margin-bottom: 30px;
+  margin-top: 8px;
 }
 .automation-date {
   display: flex;
   justify-content: space-evenly;
+  margin: 20px 0px;
 }
 .automation-date-time {
   display: flex;
-  margin: 20px 0px;
+  margin-top: 20px;
   justify-content: center;
 }
 .bubble {
