--- a/src/pages/exportExcel.css
+++ b/src/pages/exportExcel.css
@@ -10,3 +10,96 @@
   font-size: 16px;
   padding-left: 10px;
 }
+.excel-header-modal {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  padding: 0px 10px;
+  background-color: #176085;
+  z-index: 3;
+}
+.excel-header-modal-text {
+  color: #fff;
+  margin: 10px 0px;
+  font-weight: bold;
+  font-size: 15px;
+  padding-right: 15px;
+}
+.excel-modal-section {
+  background-color: #fff;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 15px 0px;
+  box-shadow: 0px 10px 18px -15px rgba(0, 0, 0, 0.19);
+}
+.excel-modal-section-date {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+.excel-modal-text {
+  color: #000;
+  margin: 10px 0px;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 0px 10px;
+}
+.excel-modal-collapse {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 56px;
+  border: #cacccf 1px solid;
+  padding: 0px 10px;
+  margin: 0px 10px;
+  border-radius: 5px;
+}
+.excel-modal-content-collapse {
+  border-width: 1px;
+  border-color: #cacccf;
+  border-style: solid;
+  border-top: none;
+  padding: 0px 20px;
+  margin: 0px 10px;
+  border-radius: 5px;
+}
+.excel-check {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: noWrap;
+  width: 100%;
+}
+.excel-file {
+  border: 2px solid #008000;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 5px 4px -2px rgba(0, 0, 0, 0.3);
+  width: 80%;
+  height: 50px;
+  margin: 10px;
+}
+.excel-icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+}
+.excel-one-line {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.excel-icon-share {
+  padding: 5px;
+  margin: 0px 2px;
+  color: #008000;
+}
+.excel-back-icon {
+  color: #fff;
+  margin-left: 10px;
+  margin-top: 3px;
+}
