--- a/src/components/textEdit.css
+++ b/src/components/textEdit.css
@@ -7,6 +7,7 @@
   color: #000;
   width: 100%;
   caret-color: #f6921e;
+  cursor: pointer;
 }
 .TE_textReportNotEditable {
   overflow: hidden;
@@ -28,4 +29,5 @@
   background-color: #ffffff99;
   padding: 5px;
   margin-right: 2px;
+  cursor: pointer;
 }
