--- a/src/pages/tabCartable.css
+++ b/src/pages/tabCartable.css
@@ -26,6 +26,7 @@
   justify-content: center;
   padding: 5px;
   box-shadow: 0px 2px 5px 0px #00000050;
+  cursor: pointer;
 }
 .automation-btn-text {
   color: #fff;
