--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  word-break: break-all;
 }
 .container_btn_row {
   justify-content: space-evenly;
