--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@ body {
   display: flex;
   align-items: center;
 }
+.display-flex-center-space {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .text-center {
   text-align: center;
 }
@@ -50,6 +55,7 @@ body {
   direction: var(--dir);
   text-align: var(--align);
   font-family: Vazirmatn, sans-serif;
+  word-break: normal;
 }
 .Snackbar_snackbar__GsYZl {
   direction: var(--dir);
