--- a/src/pages/profileSetting.css
+++ b/src/pages/profileSetting.css
@@ -1,6 +1,7 @@
 .status-member {
   background-color: #f5f5f5;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
+  min-height: 100%;
 }
 .section-container {
   background-color: #fff;
