--- a/src/pages/settingEditProfile.css
+++ b/src/pages/settingEditProfile.css
@@ -1,8 +1,9 @@
 .edit-profile-container {
-  padding-bottom: 60px;
+  padding-bottom: 20px;
   padding-top: 20px;
-  background-color: #f5f5f5;
+  background-color: hsl(0, 0%, 96%);
   flex-grow: 1;
+  min-height: 100%;
 }
 .edit-profile-form {
   background-color: #fff;
