--- a/src/pages/profileSetting.css
+++ b/src/pages/profileSetting.css
@@ -8,6 +8,7 @@
   padding: 10px;
   margin: 20px 10px;
   border-radius: 25px;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12);
 }
 .main-title {
   margin: 10px;
@@ -39,8 +40,8 @@
   justify-content: center;
 }
 .noItemText {
-  color: #00000080;
-  font-size: 10px;
+  color: #00000050;
+  font-size: 11px;
 }
 .profile-pic {
   color: #1a8de650;
@@ -55,9 +56,43 @@
   font-weight: bold;
   color: #000;
   font-size: 16px;
+  width: 65%;
 }
 .profile-setting-collapse {
   width: 100%;
   padding: 0px 12px;
   box-sizing: border-box;
+}
+.addLocation {
+  background-color: #269dd815;
+  border-radius: 12px;
+  margin: 10px 18px;
+  box-shadow: 0px 3px 9px -3px rgba(0, 0, 0, 0.31);
+}
+.addLocationText {
+  font-weight: bold;
+  color: #176085;
+  font-size: 13px;
+  padding: 8px;
+}
+.addLocation:active {
+  background-color: #00000005;
+}
+.edit-profile-container {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  background-color: hsl(0, 0%, 96%);
+  flex-grow: 1;
+  min-height: 100%;
+}
+.edit-profile-form {
+  background-color: #fff;
+  border-radius: 25px;
+  padding-bottom: 15px;
+  margin: 15px;
+  margin-top: 40px;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12);
+}
+.saveDisable {
+  color: #ffffff50;
 }
