--- a/src/components/alert.css
+++ b/src/components/alert.css
@@ -1,16 +1,17 @@
 #alert-dialog-title {
   color: #f6931e;
   padding: 0px;
-  font-weight: 800;
+  font-weight: bold;
   font-size: 17px;
   font-family: Vazirmatn, sans-serif;
   text-align: center;
+  margin: 3px 9px;
 }
 #alert-dialog-description {
   font-weight: 500;
   font-size: 14px;
   color: #000;
-  margin-top: 9px;
+  margin: 9px;
   font-family: Vazirmatn, sans-serif;
 }
 #alert-dialog-actions {
