--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,9 @@ body {
   word-break: break-all;
 }
 .container_btn_row {
-  justify-content: space-evenly;
-  align-self: stretch;
+  align-self: center;
   display: flex;
+  width: 90%;
 }
 .display-flex-center {
   display: flex;
